test/corpus/statements.txt
==================
Everything
==================

#![format = 1]

// Everything that Geno can do
#[noCodeGen]
include "other.geno"

// Fruits
#[someFlag]
enum Enum1: i16 {
  none = -1,
  apple = 1,
  orange = 2,
  kiwiFruit = 3,
  pear = 4,
}

// Everything
struct Type1 {
	alpha: i8,
	alphaBeta: i16,
	a4: u16,
	a5: i32,
	a6: u32,
	a7: i64,
	a8: u64,
	a9: f32,
  #[default = 10]
	a10: f64,
	n1: i8?,
	n2: u8?,
	n3: i16?,
	n4: u16?,
	n5: i16?,
	n6: u16?,
	n7: i32?,
	n8: u32?,
	n9: i64?,
	n10: u64?,
	#[type = "PathBuf"]
	s1: string,
	s2: string?,
	b1: bool,
	b2: bool?,
	e1: Enum1,
	e2: Enum1?,
	r1: [ string ],
	r2: [ string ]?,
	r3: [ string; 10], // Fixed length
	r4: [ bool ],
	m1: { i32 : f64 },
	m2: { string : string },
	m3: { string : bool },
	t1: Type1?, // Nested type
}

---

(schema
  (schema_attr_decl
    (attr_data_list
      (attr_data_entry
        (identifier)
        (integer_literal))))
  (comment)
  (include
    (attr_decl
      (attr_data_list
        (attr_data_entry
          (identifier))))
    (string_literal))
  (comment)
  (enum_decl
    (attr_decl
      (attr_data_list
        (attr_data_entry
          (identifier))))
    (identifier)
    (integer_type)
    (enum_variant_list
      (enum_variant
        (identifier)
        (integer_literal))
      (enum_variant
        (identifier)
        (integer_literal))
      (enum_variant
        (identifier)
        (integer_literal))
      (enum_variant
        (identifier)
        (integer_literal))
      (enum_variant
        (identifier)
        (integer_literal))))
  (comment)
  (struct_decl
    (identifier)
    (struct_field_list
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (float_type))))
      (struct_field
        (attr_decl
          (attr_data_list
            (attr_data_entry
              (identifier)
              (integer_literal))))
        (identifier)
        (field_type
          (builtin_type
            (float_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (integer_type))))
      (struct_field
        (attr_decl
          (attr_data_list
            (attr_data_entry
              (identifier)
              (string_literal))))
        (identifier)
        (field_type
          (builtin_type
            (string_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (string_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (bool_type))))
      (struct_field
        (identifier)
        (field_type
          (builtin_type
            (bool_type))))
      (struct_field
        (identifier)
        (field_type
          (identifier)))
      (struct_field
        (identifier)
        (field_type
          (identifier)))
      (struct_field
        (identifier)
        (field_type
          (array_type
            (field_type
              (builtin_type
                (string_type))))))
      (struct_field
        (identifier)
        (field_type
          (array_type
            (field_type
              (builtin_type
                (string_type))))))
      (struct_field
        (identifier)
        (field_type
          (array_type
            (field_type
              (builtin_type
                (string_type)))
            (integer_literal))))
      (comment)
      (struct_field
        (identifier)
        (field_type
          (array_type
            (field_type
              (builtin_type
                (bool_type))))))
      (struct_field
        (identifier)
        (field_type
          (map_type
            (builtin_type
              (integer_type))
            (field_type
              (builtin_type
                (float_type))))))
      (struct_field
        (identifier)
        (field_type
          (map_type
            (builtin_type
              (string_type))
            (field_type
              (builtin_type
                (string_type))))))
      (struct_field
        (identifier)
        (field_type
          (map_type
            (builtin_type
              (string_type))
            (field_type
              (builtin_type
                (bool_type))))))
      (struct_field
        (identifier)
        (field_type
          (identifier))))
    (comment)))
